// Vitest Snapshot v1

exports[`Collapse > panel work > header work 1`] = `
"<div class=\\"ix-collapse ix-collapse-md\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">header 0</span>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Collapse > panel work > header work 2`] = `
"<div class=\\"ix-collapse ix-collapse-md\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"right\\"><path d=\\"m411.776 294.784 208.192 208.192a12.8 12.8 0 0 1 0 18.048L411.776 729.216a12.8 12.8 0 0 0 0 18.112l27.2 27.136a12.8 12.8 0 0 0 18.048 0l253.44-253.44a12.8 12.8 0 0 0 0-18.048l-253.44-253.44a12.8 12.8 0 0 0-18.048 0l-27.2 27.136a12.8 12.8 0 0 0 0 18.112z\\"></path></svg></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">hello header</span>
          <!---->
        </div>
        <!---->
      </div><span class=\\"ix-header-suffix\\"><i class=\\"ix-icon ix-icon-left\\" role=\\"img\\" aria-label=\\"left\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"left\\"><path d=\\"M612.224 294.784 404.032 502.976a12.8 12.8 0 0 0 0 18.048l208.192 208.192a12.8 12.8 0 0 1 0 18.112l-27.2 27.136a12.8 12.8 0 0 1-18.048 0l-253.44-253.44a12.8 12.8 0 0 1 0-18.048l253.44-253.44a12.8 12.8 0 0 1 18.048 0l27.2 27.136a12.8 12.8 0 0 1 0 18.112z\\"></path></svg></i></span>
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Collapse > render work 1`] = `
"<div class=\\"ix-collapse ix-collapse-md\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">header 0</span>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"ix-collapse-panel ix-collapse-panel-expanded\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(90deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">header 1</span>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">header 2</span>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
